--- a/admin/src/app/components/admin/comment/comment.component.scss
+++ b/admin/src/app/components/admin/comment/comment.component.scss
@@ -18,6 +18,11 @@
     border-bottom: 1px solid #eee;
     font-weight: 500;
   }
+    .table-header {
+    background-color: #f5f5f5;
+    border-radius: 6px;
+    padding: 6px 0;
+  }
 
   .table-header > div,
   .table-row > div {
